# The-Casino

./: .env  .gitignore  GamePlans.md  blackjack.py  database.py  higherorlower.py  higherorlowerref.txt  main.py  member.json  notes.txt  pyproject.toml  url.json
resources/: __init__.py  functions.py  styles.py
